simplify predictive model and apply for current season

--- a/notebooks/train_models.ipynb
+++ b/notebooks/train_models.ipynb
@@ -2,21 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "06033494-0212-4bfa-b254-d05a63c8cd73",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -923,12 +914,12 @@
    ],
    "source": [
     "from get_data import load_history, load_current, combine_history, process_y, load_bios, load_team_data\n",
-    "load_history()\n",
-    "load_current()\n",
-    "combine_history()\n",
-    "load_team_data()\n",
-    "load_bios()\n",
-    "process_y()\n",
+    "# load_history()\n",
+    "# load_current()\n",
+    "# combine_history()\n",
+    "# load_team_data()\n",
+    "# load_bios()\n",
+    "# process_y()\n",
     "\n",
     "import pickle\n",
     "from model_training import get_pipelines, load_feature_maps\n",
